# dto/tag_input.go
@@ -12,3 +12,12 @@ type AddTagInPut struct {
 	State      int    `json:"state" valid:"Range(0,1)"`
 	CreatedBy  string
 }
+type GetTagInPut struct {
+	Name     string `form:"name" valid:"Required;MaxSize(100)"`
+	State    string `form:"state" valid:"Range(0,1)"`
+	PageNum  int    `form:"pageNum"`
+	PageSize int    `form:"pageSize"`
+}
+type DeleteTagInPut struct {
+	ID int `json:"id" valid:"Required;Min(1)"`
+}
